--- a/src/css/app.css
+++ b/src/css/app.css
@@ -7,6 +7,36 @@ body {
 a {
     text-decoration:none;
 }
+/*home界面组件**/
+.ant-card-meta-title
+{
+  font-size:x-large;
+}
+.ant-card-meta
+{
+  position:relative;
+  left: 150px;
+  
+}
+.ant-card-body
+{
+  background-color: #469dc642;
+}
+
+.ant-card-meta-description 
+{ 
+ 
+  color: #000;
+}
+
+
+
+.ant-card:hover {
+  box-shadow: 15px 15px 15px #84d5d5;
+  transform: scale(1.03);
+  background-color: #96e8e896;
+  /* background-image: url(../../public/img/test.jpg); */
+}
 
 /*页面标题组件样式 start*/
 .title {
@@ -41,3 +71,62 @@ a {
     text-shadow: aliceblue 0px 0px 10px;
     box-shadow: aliceblue 0px 0px 10px;
 }
+/*home界面样式**/
+ .Home
+  { z-index: auto;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-size: 14px;
+    /* background-image: url(../../public/img/test.jpg); */
+    background-image: url(https://s3.bmp.ovh/imgs/2023/02/24/fa662f06f9df12b3.png);
+    
+  }
+  .HomeTitle {
+    position: absolute;
+    z-index: auto;
+    left: 0;
+    top: 2;
+    width: 100%;
+    height: 7%;
+    text-align: center;
+    color: rgb(241, 234, 234);
+    font-size: 32px;
+    line-height: 66px;
+    font-weight: 600;
+    opacity: 0.7;
+    background-color:rgba(0, 0, 0, 0.521);
+  }
+  .ProjectListBox
+ {
+  position: absolute;
+  z-index: 3;
+  opacity: 0.7;
+  left: 0;
+  top:100px;
+
+ }
+ 
+
+ /*待定*/
+ /*
+ .img_box{
+  width: 100%;
+  height: 100%;
+  top:-100;}
+.img{
+    width: 100%;
+    height: 100%;
+    background-repeat:no-repeat ;
+    background-size: cover;
+   background-position: center;
+  }
+
+  .ant-image-mask
+  {
+    position: absolute;
+    z-index: 0;
+    
+  }**/
